# zeronix

./: .gitignore  .gitmodules  Makefile  README.md
.githooks/: commit-msg
kernel/: Makefile
kernel/docs/: .gitignore  Doxyfile  pyproject.toml
kernel/docs/source/: conf.py  index.rst
kernel/src/: kernel.c
kernel/src/boot/: boot.c
kernel/src/hal/: cpu.c
kernel/src/include/: boot.h  cpu.h  kernel.h
kernel/src/lib/: string.c
meta/doxy/: Doxyfile
tools/: defaults.mk  rules.mk
