[project]
name = "zerokrnl"
version = "0"
description = ""
authors = [
    {name = "Viktor Popp",email = "viktorpopp.dev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exhale (>=0.3.7,<0.4.0)",
    "breathe (>=4.36.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
